--- a/Lecture 03/lecture0302.ipynb
+++ b/Lecture 03/lecture0302.ipynb
@@ -703,7 +703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Group Problems\n",
+    "## Team Work\n",
     "\n",
     "Solve the following programs by finding the solutions to the KKT conditions, verifying the constraint qualifications explicitly as you go:\n",
     "\n",
