--- a/Lecture 03/lecture0303.ipynb
+++ b/Lecture 03/lecture0303.ipynb
@@ -914,7 +914,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Group Problems\n",
+    "## Team Work\n",
     "\n",
     "Write down the primal-dual steps and surrogate duality gaps for\n",
     "\n",
@@ -927,6 +927,15 @@
     "7. $\\min 3x^2 + 2y^2 + z^2\\text{ subject to } x^2+y^2+z^2=1\\text{ and } x^2-2y^2+z^2\\leq 0$\n",
     "8. $\\min 3x^2 + 2y^2 + z^2\\text{ subject to } xyz=1\\text{ and }x^2+y^2+z^2\\leq 4$\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
