--- a/Lecture 04/lecture0401.ipynb
+++ b/Lecture 04/lecture0401.ipynb
@@ -484,7 +484,7 @@
    "source": [
     "In the construction phase, we specified an **optimizer** (GradientDescentOptimizer) and passed it the cross entropy function for minimization. We also passed a **learning rate** parameter to the optimizer. This is equivalent to the step size for gradient descent with a fixed step size. \n",
     "\n",
-    "Now, this performs gradient descent without backtracking, so we do not expect the value of the function to decrease monotonically. On the other hand, *we didn't have to compute any gradients by hand*. This is a feature of **automatic differentiation**, which automatically computes derivatives given a range of symbolic functions. Automatic differentiation gives us a way to quickly prototype applications of optimization, but it is often possible to make an implementation more efficient by computing gradients by hand. "
+    "Now, this performs gradient descent without backtracking, so we do not expect the value of the function to decrease monotonically. On the other hand, *we didn't have to compute any gradients by hand*. This is a feature of **automatic differentiation**, which automatically computes derivatives of functions defined on a computer. Automatic differentiation gives us a way to quickly prototype applications of optimization, but it is often possible to make an implementation more efficient by computing gradients by hand. "
    ]
   },
   {
@@ -834,53 +834,98 @@
     "\n",
     "We say that members of $\\mathcal{T}_{\\bf n}$ are $N$th order tensors whe ${\\bf n}\\in\\mathbb{N}^n$. Thus, we call scalars $0$th order tensors, vectors are $1$st order tensors, matrices are $2$nd order tensors, and 3D arrays will be $3$rd order tensors.\n",
     "\n",
+    "### Tensor Products\n",
+    "\n",
+    "Tensor products generalize products of the form ${\\bf x}{\\bf y}^T$ for ${\\bf x}\\in\\mathbb{R}^m$ and ${\\bf y}\\in\\mathbb{R}^n$. In particular, we define the tensor product of ${\\bf x}$ with ${\\bf y}$ as ${\\bf x}\\otimes {\\bf y} = {\\bf x}{\\bf y}^T$. Now, ${\\bf x}{\\bf y}^T$ is an $m$ by $n$ matrix whose $(i,j)$th entry is the product $x_i y_j$. We immediately observe the following properties that will help us generalize the tensor product. \n",
+    "\n",
+    "1. ${\\bf x}\\otimes {\\bf y} \\not = {\\bf y}\\otimes {\\bf x}$ in general since $\\begin{pmatrix} 1\\\\ 0\\end{pmatrix}\\otimes \\begin{pmatrix} 0\\\\1\\end{pmatrix}=\\begin{pmatrix} 0 & 1\\\\ 0 & 0\\end{pmatrix}\\not=\\begin{pmatrix} 0 & 0\\\\ 1 & 0\\end{pmatrix}=\\begin{pmatrix} 1\\\\ 0\\end{pmatrix}\\otimes \\begin{pmatrix} 0\\\\1\\end{pmatrix}$\n",
+    "2. Not every $A\\in M_{m,n}$ has the form ${\\bf x}\\otimes {\\bf y}$ for some ${\\bf x}\\in\\mathbb{R}^m$ and ${\\bf y}\\in\\mathbb{R}^n$ since ${\\bf x}\\otimes {\\bf y}$ is necessarily a rank one matrix\n",
+    "3. If $\\{{\\bf u}_i\\}_{i=1}^m$ and $\\{{\\bf v}_j\\}_{j=1}^n$ are bases for $\\mathbb{R}^m$ and $\\mathbb{R}^n$ respectively, then $\\{ {\\bf u}_i\\otimes {\\bf v}_j\\}_{1\\leq i\\leq m, 1\\leq j\\leq m}$ is a basis for $M_{m, n}$\n",
+    "4. The tensor product satisfies $(a{\\bf x}+b{\\bf y})\\otimes{\\bf z} = a {\\bf x}\\otimes {\\bf z} + b {\\bf x}\\otimes {\\bf z}$, and ${\\bf x}\\otimes(a{\\bf v}+b{\\bf w})= a{\\bf x}\\otimes {\\bf v} + b{\\bf x}\\otimes {\\bf w}$, so we say that the tensor product is **bilinear**\n",
+    "\n",
+    "In particular, if we let $\\{{\\bf e}_{i}^{(1)}\\}_{i=1}^m$ denote the standard orthonormal basis for $\\mathbb{R}^m$, and $\\{{\\bf e}_{j}^{(2)}\\}_{j=1}^n$ denote the standard orthonormal basis for $\\mathbb{R}^n$, then we note that \n",
+    "$$\n",
+    "\\{{\\bf e}_i^{(1)}\\otimes {\\bf e}_j^{(2)}\\}_{1\\leq i\\leq m,1\\leq j\\leq n}\n",
+    "$$\n",
+    "is a basis for $M_{m,n}$. In fact, if $A=[a_{i,j}]\\in M_{m,n}$, then\n",
+    "$$\n",
+    "A = \\sum_{i=1}^m\\sum_{j=1}^n a_{i,j}{\\bf e}_i^{(1)}\\otimes {\\bf e}_j^{(2)}.\n",
+    "$$\n",
+    "\n",
+    "Similarly, we can define a tensor product of three vectors ${\\bf x}\\in\\mathbb{R}^{n_1}, {\\bf y}\\in\\mathbb{R}^{n_2}, {\\bf z}\\in\\mathbb{R}^{n_3}$ to be ${\\bf x}\\otimes{\\bf y}\\otimes{\\bf z}\\in \\mathcal{T}_{(n_1,n_2,n_3)}$ by setting\n",
+    "$$\n",
+    "[{\\bf x}\\otimes{\\bf y}\\otimes{\\bf z}]_{i_1,i_2,i_3} = {\\bf x}_{i_1}{\\bf y}_{i_2}{\\bf z}_{i_3}\n",
+    "$$\n",
+    "for all $1\\leq i_1\\leq n_1$, $1\\leq i_2\\leq n_2$, $1\\leq i_3\\leq n_3$ (or ${\\bf 1}\\leq {\\bf i}\\leq {\\bf n}$).\n",
+    "\n",
+    "By associativity of scalar multiplication, we see that the tensor product is associative, but we also observe that it is still not commutative. We also see that the tensor product is **multilinear**:\n",
+    "$$\n",
+    "(a{\\bf x} + b{\\bf y})\\otimes {\\bf u} \\otimes {\\bf t} = a{\\bf x}\\otimes {\\bf u} \\otimes {\\bf t} + b{\\bf y}\\otimes {\\bf u} \\otimes {\\bf t}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "{\\bf x}\\otimes (p{\\bf u} + q{\\bf v}) \\otimes {\\bf t}= p{\\bf x}\\otimes{\\bf u}\\otimes {\\bf t} + q {\\bf x}\\otimes{\\bf v}\\otimes {\\bf t}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "{\\bf x} \\otimes {\\bf u} \\otimes (\\alpha {\\bf t} + \\beta {\\bf s})= \\alpha{\\bf x} \\otimes {\\bf u} \\otimes {\\bf t} + \\beta{\\bf x} \\otimes {\\bf u} \\otimes {\\bf s}\n",
+    "$$\n",
+    "\n",
+    "when $a, b, p, q, \\alpha, \\beta$ are all scalars, ${\\bf x},{\\bf y}\\in\\mathbb{R}^{n_1}$, ${\\bf u},{\\bf v}\\in\\mathbb{R}^{n_2}$, and ${\\bf t}, {\\bf s}\\in\\mathbb{R}^{n_3}$.\n",
+    "\n",
+    "We can also define a tensor product of a matrix with a vector by declaring $A\\otimes {\\bf x}\\in \\mathcal{T}_{n_1, n_2, n_3}$ for $A=[a_{i_1, i_2}]\\in M_{n_1, n_2}$ and ${\\bf x}\\in\\mathbb{R}^{n_3}$ by declaring\n",
+    "$$\n",
+    "[A\\otimes {\\bf x}]_{i_1, i_2, i_3} = a_{i_1, i_2}{\\bf x}_{i_3}.\n",
+    "$$\n",
+    "Since $a {\\bf x}\\otimes{\\bf u} + b{\\bf y}\\otimes {\\bf v}\\in M_{n_1, n_2}$ for any scalars $a, b$, ${\\bf x},{\\bf y}\\in\\mathbb{R}^{n_1}$, ${\\bf u},{\\bf v}\\in\\mathbb{R}^{n_2}$, we therefore get that\n",
+    "$$\n",
+    "\\left[\\left(a {\\bf x}\\otimes{\\bf u} + b{\\bf y}\\otimes {\\bf v}\\right)\\otimes {\\bf z}\\right]_{i_1, i_2, i_3} = (a x_{i_1} u_{i_2} + by_{i_1}v_{i_2})z_{i_3} = a x_{i_1} u_{i_2}z_{i_3} + by_{i_1}v_{i_2}z_{i_3} =\\left[a {\\bf x}\\otimes{\\bf u}\\otimes {\\bf z} + b{\\bf y}\\otimes {\\bf v}\\otimes{\\bf z}\\right]_{i_1, i_2, i_3},\n",
+    "$$\n",
+    "and hence \n",
+    "$$\n",
+    "\\left(a {\\bf x}\\otimes{\\bf u} + b{\\bf y}\\otimes {\\bf v}\\right)\\otimes {\\bf z} = a {\\bf x}\\otimes{\\bf u}\\otimes {\\bf z} + b{\\bf y}\\otimes {\\bf v}\\otimes{\\bf z}.\n",
+    "$$\n",
+    "Such a property will also be called **multilinearity**. \n",
+    "\n",
+    "Finally, we can declare the general tensor product of two tensors $\\mathcal{A}\\in \\mathcal{T}_{\\bf m}$ and $\\mathcal{B}\\in\\mathcal{T}_{\\bf n}$ to be $\\mathcal{A}\\otimes\\mathcal{B}\\in \\mathcal{T}_{{\\bf m}\\oplus{\\bf n}}$ by setting\n",
+    "$$\n",
+    "{\\bf m}\\oplus {\\bf n}=(m_1, \\ldots, m_k, n_1,\\ldots, n_l)\n",
+    "$$\n",
+    "and\n",
+    "$$\n",
+    "\\left[\\mathcal{A}\\otimes\\mathcal{B}\\right]_{{\\bf i}\\oplus {\\bf j}}=\\left[\\mathcal{A}\\otimes\\mathcal{B}\\right]_{i_1, i_2,\\ldots, i_k,j_1,\\ldots, j_l}=\\mathcal{A}_{{\\bf i}} \\mathcal{B}_{{\\bf j}}\n",
+    "$$\n",
+    "for all ${\\bf 1}\\leq {\\bf i}\\leq {\\bf m}$ and all ${\\bf 1}\\leq {\\bf j}\\leq {\\bf n}$.\n",
+    "\n",
+    "We will then have that this product is associative and satisfies multilinearity.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Tensor Contractions along a Single Index Pair\n",
     "\n",
-    "For a vector ${\\bf n}\\in\\mathbb{N}^N$, and $i\\in\\{1,\\ldots, N\\}$, let ${\\bf n}_{\\setminus \\{i\\}}\\in\\mathbb{N}^{N-1}$ denote vector obtained by removing the $i$th entry of ${\\bf n}$, and we let ${\\bf n}\\leftarrow_{i} k\\in\\mathbb{N}^N$ denote the vector obtained by replacing the $i$th entry of ${\\bf n}$ with $k$. If ${\\bf n}\\in\\mathbb{N}^N$ and ${\\bf m}\\in\\mathbb{N}^M$, then we define \n",
-    "\n",
+    "When two dimensions of tensor have equal length, we can define a simultaneous sum over those dimension. This will produce a tensor with two fewer dimensions than the original tensor. One classic example of such an operation is the **trace of a square matrix**. If $A\\in M_{n,n}$ then\n",
     "$$\n",
-    "{\\bf n}\\oplus{\\bf m} =\\begin{pmatrix}\n",
-    "n_1 & \\cdots & n_N & m_1 &\\cdots &m_M\n",
-    "\\end{pmatrix}\\in \\mathbb{N}^{N+M}.\n",
+    "\\text{trace}(A) = \\sum_{i=1}^n a_{i,i}.\n",
     "$$\n",
-    "\n",
-    "For example, if ${\\bf n} = (4, 2, 6, 3)$ and ${\\bf m}=(6, 7, 5)$, then ${\\bf n}_{\\setminus\\{3\\}}=(4, 2, 3)$, ${\\bf m}_{\\setminus\\{1\\}}=(7,5)$, and \n",
-    "\n",
+    "For a tensor product of two vectors ${\\bf x},{\\bf y}\\in \\mathbb{R}^n$, we have that\n",
     "$$\n",
-    "{\\bf n}_{\\setminus\\{3\\}}\\oplus {\\bf m}_{\\setminus\\{1\\}} = (4, 2, 3, 7, 5).\n",
+    "\\text{trace}({\\bf x}\\otimes {\\bf y}) = \\sum_{i=1}^n x_i y_i = {\\bf x}^T {\\bf y}\n",
     "$$\n",
+    "recovers the Euclidean inner product. \n",
     "\n",
-    "We also have\n",
-    "\n",
+    "The other classic example of this operation is matrix-vector multiplication. That is, if $A\\in M_{m,n}$ and ${\\bf x}\\in \\mathbb{R}^n$, then $A\\otimes {\\bf x}\\in \\mathcal{T}_{m,n,n}$, and therefore we can define ${\\bf y}\\in \\mathbb{R}^m$ by\n",
     "$$\n",
-    "{\\bf n}\\leftarrow_{2} 1 = (4, 1, 6, 3).\n",
+    "y_i = \\sum_{j=1}^n [A\\otimes {\\bf x}]_{i, j, j} = \\sum_{j=1}^n a_{i,j}x_j.\n",
     "$$\n",
     "\n",
-    "Now, suppose that there are indices $i$ and $j$ such that $n_{i}=m_{j}$ for index vectors ${\\bf n}\\in\\mathbb{N}^N$ and ${\\bf m}\\in\\mathbb{N}^M$. Then we can define a **tensor contraction operator** $c_{(i,j)}:\\mathcal{T}_{\\bf n}\\times \\mathcal{T}_{\\bf m}\\rightarrow \\mathcal{T}_{{\\bf n}_{\\setminus\\{i\\}}\\oplus{\\bf m}_{\\setminus\\{j\\}}}$\n",
-    "\n",
+    "In general, we will use $c_{(i,j)}(\\mathcal{A})$ to denote the contraction of $\\mathcal{A}\\in \\mathcal{T}_{\\bf n}$ when the contraction along the $i$th and $j$th dimensions are **compatible** (i.e. $n_i=n_j$). Thus, for $A\\in M_{n,n}$\n",
     "$$\n",
-    "c_{(i, j)}(\\mathcal{A},\\mathcal{B})_{{\\bf k}_{\\setminus\\{i\\}}\\oplus{\\bf l}_{\\setminus\\{j\\}}} = \\sum_{k_i=1}^{n_i} a_{{\\bf k}\\leftarrow_{\\{i\\}}k_i} b_{{\\bf l}\\leftarrow_{\\{j\\}}k_i}\n",
+    "c_{(1,2)}(A)=\\text{trace}(A)\n",
     "$$\n",
-    "\n",
-    "We say that that this is contraction of $\\mathcal{A}$ and $\\mathcal{B}$ over the $(i,j)$th index pair. \n",
-    "\n",
-    "For example, matrix-vector multiplication may be thought of as a contraction on $A\\in \\mathcal{T}_{(m,n)}$ and ${\\bf x}\\in\\mathcal{T}_{(n)}$. We note that $(m,n)$ and $(n)$ agree at $i=2$ and $j=1$, and then\n",
-    "\n",
-    "$$\n",
-    "(m,n)_{\\setminus\\{2\\}}\\oplus (n)_{\\setminus\\{1\\}}= (m) \\oplus () = (m) \\text{ (by convention)}.\n",
-    "$$\n",
-    "\n",
-    "We also note that\n",
-    "\n",
-    "$$\n",
-    "(k_1, k_2)_{\\setminus\\{2\\}}\\oplus (l_1)_{\\setminus\\{1\\}} = (k_1),\n",
-    "$$\n",
-    "\n",
-    "so\n",
-    "\n",
-    "$$\n",
-    "c_{(2, 1)}(A,{\\bf x})_{(k_1)}=c_{(2, 1)}(A,{\\bf x})_{(k_1, k_2)_{\\setminus\\{2\\}}\\oplus (l_1)_{\\setminus\\{1\\}}}=\\sum_{k=1}^n a_{(k_1,k_2)\\leftarrow_{2}k}x_{(l_1)\\leftarrow_{1} k}=\\sum_{k=1}^n a_{k_1, k} x_k.\n",
-    "$$\n",
+    "and for $A\\in M_{m,n}$ and ${\\bf x}\\in \\mathbb{R}^n$, $c_{2,3}(A\\otimes {\\bf x})= A{\\bf x}$.\n",
     "\n",
     "It should be clear from the name, but TensorFlow supports such tensor operations!"
    ]
