--- a/Lecture 04/lecture0402.ipynb
+++ b/Lecture 04/lecture0402.ipynb
@@ -159,20 +159,37 @@
     "\n",
     "def chain_rule(Dg, Df, var_shape):\n",
     "    # Computes the Jacobian D (g o f)\n",
-    "    dim = len(var_shape)\n",
-    "    Dg_axes = list(range(Dg.ndim-dim, Dg.ndim))\n",
-    "    Df_axes = list(range(dim))\n",
+    "    dim = len(var_shape) # Extracting the shape of the intermediate variable (i.e Y for g(Y), Y=f(X))\n",
+    "    Dg_axes = list(range(Dg.ndim-dim, Dg.ndim)) # Last \"dim\" indices of the Dg \n",
+    "    Df_axes = list(range(dim)) # First \"dim\" indices of the Df tensor\n",
     "    return np.tensordot(Dg, Df, axes=(Dg_axes, Df_axes))\n",
     "\n",
     "# Compute the Jacobian blocks of X @ W + b\n",
     "\n",
     "def DX_affine(X, W, b):\n",
     "    # (d_{x_{i, j}} (X @ W))_{a, b} = e_a^T e_ie_j^T W e_b, so a,i slices equal W.T\n",
-    "    D = np.zeros((X.shape[0], W.shape[1], X.shape[0], X.shape[1]))\n",
+    "    D = np.zeros((X.shape[0], W.shape[1], X.shape[0], X.shape[1])) # Number of elements: X.shape[0]**2 * W.shape[1] * X.shape[1] \n",
     "    for k in range(X.shape[0]):\n",
-    "        D[k,:,k,:]=W.T\n",
+    "        D[k,:,k,:]=W.T # Changes X.shape[0]*W.shape[1]*X.shape[1]\n",
+    "    # The fraction of nonzero entries of D to total entries of D is 1/X.shape[0]\n",
+    "    # For the BCW dataset with X.shape[0]=400, the D tensor is very *sparse*\n",
     "    return D, X.shape\n",
     "\n",
+    "# We note that this Jacobian is large and sparse. However, the information for constructing D is contained\n",
+    "# entirely in W. The whole goal of defining this Jacobian is to use it in some chain rule. If the affine function\n",
+    "# is acting as an outer function, then the chain rule requires summation over the last two index positions. If it is\n",
+    "# the inner function of a composition, we would sum over the first two indices. \n",
+    "\n",
+    "def DX_affine_outer_closure(X,W):\n",
+    "    def chn_rule(df):\n",
+    "        # df is the Jacobian of the inner function\n",
+    "        l = len(df.shape)\n",
+    "        D = np.zeros((X.shape[0], W.shape[1], df.shape[2], df.shape[3])\n",
+    "        for  k in range(X.shape[0])\n",
+    "            D[k,:,:,:] =  np.tensordot(W, df[k,:,:,:], axes=([0], [0]))\n",
+    "        return D\n",
+    "    return chn_rule\n",
+    "                     \n",
     "def DW_affine(X, W, b):\n",
     "    # (d_{w_{i, j}} (X @ W))_{a, b} = e_a^T X e_ie_j^T e_b, so b, j slices equal x\n",
     "    D = np.zeros((X.shape[0], W.shape[1], W.shape[0], W.shape[1]))\n",
